replace collector by toList